src/snapshots/typst_geshihua__pretty__tests__convert_markup-2.snap
---
source: src/pretty.rs
expression: doc.pretty(120).to_string()
---
"=== --open\n\nWhen you use the `--open` flag, typst-book will open the rendered book in\nyour default web browser after building it."
