src/snapshots/typst_geshihua__pretty__tests__convert_markup.snap
---
source: src/pretty.rs
expression: root
---
Markup: 129 [
    Heading: 10 [
        HeadingMarker: "===",
        Space: " ",
        Markup: 6 [
            Shorthand: "--",
            Text: "open",
        ],
    ],
    Parbreak: "\n\n",
    Text: "When you use the",
    Space: " ",
    Raw: 8 [
        RawDelim: "`",
        Text: "--open",
        RawDelim: "`",
    ],
    Space: " ",
    Text: "flag, typst-book will open the rendered book in",
    Space: "\n",
    Text: "your default web browser after building it.",
]
