src/snapshots/typst_geshihua__pretty__tests__to_doc-2.snap
---
source: src/pretty.rs
expression: "to_doc(test.into(), false)"
---
[
    "123",
    Hardline,
    "456",
    Hardline,
    "789",
]
