src/snapshots/typst_geshihua__pretty__tests__to_doc-3.snap
---
source: src/pretty.rs
expression: "to_doc(test.into(), false)"
---
[
    "123",
    Hardline,
    "4567",
    Hardline,
    "789",
]
