src/snapshots/typst_geshihua__pretty__tests__to_doc.snap
---
source: src/pretty.rs
expression: "to_doc(test.into(), false)"
---
"command can take a directory as an argument to use as the book"
